
        * wtf/SaturatedArithmetic.h: Added.
        (saturatedAddition):
        (saturatedSubtraction):
        Support functions for saturated addition/subtraction. Compares the signed
        bit of the values instead of using range checks to reduce branching.

        * wtf/Platform.h:
        Add ENABLE_SATURATED_LAYOUT_ARITHMETIC flag.

2012-08-23  Mark Rowe  <mrowe@apple.com>

        Roll out part of r126475 that breaks the build with older versions of Clang.

        * wtf/FastMalloc.cpp:

2012-08-23  Mark Rowe  <mrowe@apple.com>

        Make WTF build with the latest version of clang.

        Reviewed by Dan Bernstein.

        * wtf/FastMalloc.cpp:
        (WTF): Disable the -Wunused-private-field warning around the declaration of
        TCMalloc_Central_FreeListPadded since the padding is intentionally unused.
        (WTF::AdminRegionRecorder): Remove the unused m_reader member.
        (WTF::FastMallocZone::enumerate): Don't pass in the RemoteMemoryReader since
        it is no longer needed.

2012-08-22  Geoffrey Garen  <ggaren@apple.com>

        Fixed a fastMallocForbid/Allow compile error for some compilers
        https://bugs.webkit.org/show_bug.cgi?id=94775

        Reviewed by Gavin Barraclough.

        * wtf/FastMalloc.h:
        (WTF::fastMallocForbid()):
        (WTF::fastMallocAllow()): Export, since these are called by JavaScriptCore.

2012-08-22  Geoffrey Garen  <ggaren@apple.com>

        ThreadRestrictionVerifier should be opt-in, not opt-out
        https://bugs.webkit.org/show_bug.cgi?id=94761

        Reviewed by Mark Hahnenberg.

        WebKit's JavaScript engine supports use on multiple threads, so default-on
        is not appropriate for most of our objects, and it causes lots of suprious
        assertions.

        * wtf/MetaAllocator.cpp:
        (WTF::MetaAllocatorHandle::MetaAllocatorHandle): No need to turn off
        explicitly, since it's off by default now.

        * wtf/ThreadRestrictionVerifier.h: